--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@
   box-sizing: border-box;
   margin: 0;
 }
+
+body {
+  text-align: center;
+  background: url(https://i.imgur.com/UGohCPf.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .container {
   display: grid;
 
@@ -27,17 +35,18 @@
   grid-gap: 10px;
   height: 100vh;
 }
-
+/*==========Header==========*/
 header {
   grid-area: header;
 }
-
-body {
-  text-align: center;
-  background: url(https://i.imgur.com/LBDUD3J.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+.logo {
+  font-family: 'Londrina Outline', cursive;
+  font-weight: lighter;
+  font-size: 80px;
+  color: var(--darkblue)
 }
+
+/*==========Nav==========*/
 nav {
   grid-area: nav;
   margin-left: 0.5rem;
@@ -46,25 +55,29 @@ nav {
 
 .nav-text {
   font-family: 'Londrina Outline', cursive;
-  font-size: 20px;
-  color: var(--darkblue)
+  font-size: 35px;
+  color: var(--darkblue);
+  margin:20px
 }
 
 a {
   text-decoration: none;
+  color: var(--darkblue);
 }
+
+/*==========Main==========*/
 
 main {
   grid-area: content;
 }
 
+/*==========Form==========*/
 .aside {
   grid-area: aside;
   margin-right: 15rem;
   margin-top: 8rem;
   
 }
-
 .new-form {
   display: grid;
   grid-template-columns: [labels] 1fr [controls] auto;
@@ -81,10 +94,39 @@ main {
   padding: .2em;
 }
 
-.logo {
-  font-family: 'Londrina Outline', cursive;
-  font-weight: lighter;
-  font-size: 80px;
-  color: var(--darkblue)
+/*==========Categories==========*/
+.cat-head {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--darkblue);
+  font-weight: bolder;
 }
 
+.categories {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--darkblue);
+  
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 20px;
+  border-radius: 25px;
+  background-color: var(--mustard);
+  width: 175px;
+  height: 145px;
+
+}
+
+img {
+  margin: auto;
+  padding: 5px;
+}
+
+.frame {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-top: 50px;
+  margin-left: 80px
+}
+.categories:hover {
+  box-shadow: 0 8px 16px 0 rgba(42, 45, 97,0.2);
+}
