tweeks Nav,index.css,Categories

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ main {
 }
 
 /*==========Categories==========*/
-.cat-head {
+.category-head {
   font-family: 'Montserrat', sans-serif;
   color: var(--darkblue);
   font-weight: bolder;
