--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,11 @@ main {
   background: transparent;
 }
 
+.nw-sur:focus {
+  outline: 1px solid transparent;
+  border: 1px solid var(--mustard);
+}
+
 .nw-sur::placeholder {
   color: var(--coral);
   font-family: 'Montserrat';
@@ -138,7 +143,6 @@ main {
 
 .ques-img {
   margin-right: 20px;
-  transform: rotate(-20deg);
   margin-right: -350px;
   margin-top: 100px;
  
